# aurora-engine

./: Makefile  rust-toolchain
engine/: Cargo.toml
engine-precompiles/: Cargo.toml
engine-standalone-storage/: Cargo.toml
engine-standalone-tracing/: Cargo.toml
engine-standalone-tracing/src/: lib.rs  sputnik.rs  types.rs
engine-tests/: Cargo.toml
engine-tests/src/benches/: nft_pagination.rs
engine-tests/src/test_utils/: mod.rs
engine-tests/src/tests/: erc20_connector.rs  sanity.rs  uniswap.rs
engine-transactions/: Cargo.toml
