[package]
name = "aurora-engine-tests"
version = "1.0.0"
authors = ["NEAR <hello@near.org>"]
edition = "2018"
description = ""
documentation = ""
readme = true
homepage = "https://github.com/aurora-is-near/aurora-engine"
repository = "https://github.com/aurora-is-near/aurora-engine"
license = "GPL-3.0"
publish = false
autobenches = false

[dependencies]
aurora-engine = { path = "../engine", default-features = false, features = ["std", "tracing"] }
aurora-engine-types = { path = "../engine-types", default-features = false, features = ["std"] }
aurora-engine-sdk = { path = "../engine-sdk", default-features = false, features = ["std"] }
aurora-engine-precompiles = { path = "../engine-precompiles", default-features = false }
engine-standalone-storage = { path = "../engine-standalone-storage", default-features = false }
engine-standalone-tracing = { path = "../engine-standalone-tracing", default-features = false }
borsh = { version = "0.8.2", default-features = false }
sha3 = { version = "0.9.1", default-features = false }
evm = { git = "https://github.com/aurora-is-near/sputnikvm.git", default-features = false, features = ["std", "tracing"] }
evm-runtime = { git = "https://github.com/aurora-is-near/sputnikvm.git", default-features = false, features = ["std", "tracing"] }
evm-gasometer = { git = "https://github.com/aurora-is-near/sputnikvm.git", default-features = false, features = ["std", "tracing"] }
rlp = { version = "0.5.0", default-features = false }

[dev-dependencies]
base64 = "0.13.0"
bstr = "0.2"
byte-slice-cast = { version = "1.0", default-features = false }
ethabi = { git = "https://github.com/darwinia-network/ethabi", branch = "xavier-no-std" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = { version = "0.4.3", default-features = false }
near-sdk = { git = "https://github.com/near/near-sdk-rs.git", rev = "4399a86b3ffc303aea6f9b3808e7a4daa60bb087" }
near-sdk-sim = { git = "https://github.com/near/near-sdk-rs.git", rev = "4399a86b3ffc303aea6f9b3808e7a4daa60bb087" }
near-crypto = { git = "https://github.com/near/nearcore.git", branch = "profiler" }
near-vm-runner = { git = "https://github.com/near/nearcore.git", branch = "profiler" }
near-vm-logic = { git = "https://github.com/near/nearcore.git", branch = "profiler" }
near-primitives-core = { git = "https://github.com/near/nearcore.git", branch = "profiler" }
near-primitives = { git = "https://github.com/near/nearcore.git", branch = "profiler" }
wasmer = { package = "wasmer-near", git = "https://github.com/near/wasmer.git", branch = "profiler", default-features = false, features = ["singlepass", "universal"] }
libsecp256k1 = "0.3.5"
rand = "0.7.3"

criterion = "0.3.4"
git2 = "0.13"
tempfile = "3.2.0"

[features]
meta-call = ["aurora-engine/meta-call"]
mainnet-test = ["aurora-engine/mainnet-test", "meta-call"]
testnet-test = ["aurora-engine/testnet-test", "meta-call"]
error_refund = ["aurora-engine/error_refund", "aurora-engine-precompiles/error_refund"]
